--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+.DS_Store
+
 # Binaries for programs and plugins
 *.exe
-*.exe~
 *.dll
 *.so
 *.dylib
@@ -10,3 +11,16 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Terraform & Provider specific
+backend.tf
+terraform-provider-*
+.terraform
+terraform.tfstate*
+*.log
+credentials.json
+pkg/
+vendor/
+
+# IDE
+.idea
