--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,42 @@
-services:
-  - docker
 language: go
+dist: xenial
+
 go:
   - "1.10"
   - "1.11"
 
 before_install:
-  # Setup dependency management tool
-  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-
-script:
   - 'if [ "${TRAVIS_BUILD_DIR}" != "${GOPATH}/src/github.com/ekino/terraform-provider-greseller" ]; then ln -s "${TRAVIS_BUILD_DIR}" "${GOPATH}/src/github.com/ekino/terraform-provider-greseller"; fi'
-  - make deps
+  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+install: 
+  - dep ensure -v  
+script: 
   - make test
 
 cache:
   directories:
     - ${GOPATH}/pkg/dep/sources
+  
 
 stages:
+  - name: test
   - name: release
     if: tag IS present
 
 jobs:
-  include:
+  include:      
     - stage: release
       go: "1.11"
-      script: VERSION=${TRAVIS_TAG} make build
+      before_install:
+        - 'if [ "${TRAVIS_BUILD_DIR}" != "${GOPATH}/src/github.com/ekino/terraform-provider-greseller" ]; then ln -s "${TRAVIS_BUILD_DIR}" "${GOPATH}/src/github.com/ekino/terraform-provider-greseller"; fi'
+        - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+      install: 
+        - dep ensure -v 
+      script: 
+        - VERSION=${TRAVIS_TAG} make dist
+      cache:
+        directories:
+          - ${GOPATH}/pkg/dep/sources
       deploy:
         provider: releases
         api_key:
@@ -34,3 +44,5 @@ jobs:
         file_glob: true
         file: pkg/dist/*
         skip_cleanup: true
+        on:
+          tags: true
